Updated all Mini text to Youth

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Gladewater Bears Little League - Mini Cheer and Mini Football programs for grades 1st through 6th in Gladewater, Texas." />
     <meta name="keywords" content="Gladewater Bears, Little League, Mini Cheer, Mini Football, Youth Sports, Texas, Gladewater" />
     <meta name="theme-color" content="#FF6600" />
-    <title>Gladewater Bears | Mini Cheer & Mini Football</title>
+    <title>Gladewater Bears | Youth Cheer & Youth Football</title>
   </head>
   <body>
     <div id="root"></div>
